make my profile prettier

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img class="img-circle" src="images/Jlp01.PNG" width="100px" alt="Ma photo">
           <p>I love art, sea, coding and riding sport.</p>
           <p>Le Wagon is an opportunity for me to according time for all my passion and those who I love.</p>
-            <a href="https://google.com"><strong>Google link trés utile.</strong>
+            <a href="https://google.com" class ="btn-lien"><strong>Google link trés utile.</strong>
           </a>
         </div>
     <div class="card text-center card-white">
@@ -37,7 +37,7 @@
             </a>
           </li>
           <li>
-            <a href="#" target="_blank">
+            <a href="#" target="_blank" class="icone">
               <i class ="fab fa-medium">
              </i>
             </a>
