make my profile prettier

--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
         <img class="img-circle" src="images/Jlp01.PNG" width="100px" alt="Ma photo">
           <p>I love art, sea, coding and riding sport.</p>
           <p>Le Wagon is an opportunity for me to according time for all my passion and those who I love.</p>
-            <a href="https://google.com" class ="btn-lien"><strong>Google link trés utile.</strong>
+            <a href="https://google.com" class ="btn-lien"><strong>Google link pour ma mamie.</strong>
           </a>
         </div>
     <div class="card text-center card-white">
-      <h2>Suivez moi sur les réseaux !</h2>
+      <h2>Follow me je suis trés intéréssant!</h2>
        <ul class = "list-inline">
          <li>
             <a href="#" target="_blank">
-              <i class ="fab fa-facebook-square">
+              <i class ="fab fa-facebook-f">
              </i>
             </a>
           </li>
           <li>
             <a href="#" target="_blank">
-              <i class ="fab fa-twitter-square">
+              <i class ="fab fa-twitter">
              </i>
             </a>
           </li>
