make my profile prettier

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <img class="img-circle" src="images/Jlp01.PNG" width="100px" alt="Ma photo">
           <p>I love art, sea, coding and riding sport.</p>
           <p>Le Wagon is an opportunity for me to according time for all my passion and those who I love.</p>
+          <p>I'm searching for english lesson too.</p>
             <a href="https://google.com" class ="btn-lien"><strong>Google link pour ma mamie.</strong>
           </a>
         </div>
