make my profile prettier

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <div class="card text-center card-white">
       <h1>Hello, I'm Jean-Loup</h1>
         <img class="img-circle" src="images/Jlp01.PNG" width="100px" alt="Ma photo">
-          <p>I love art, sea, coding and riding sport.</p>
-          <p>Le Wagon is an opportunity for me to according time for all my passion and those who I love.</p>
-          <p>I'm searching for english lesson too.</p>
-            <a href="https://google.com" class ="btn-lien"><strong>Google link pour ma mamie.</strong>
+          <p>I love art, sea, coding and surfing 🌊</p>
+          <p>Le Wagon is an opportunity for me to increase my coding skills and to share that with my relations.</p>
+          <p>And of course... to change my life 🖥️</p>
+            <a href="https://google.com" class ="btn-lien"><strong>Lien vers le savoir absolu</strong>
           </a>
         </div>
     <div class="card text-center card-white">
-      <h2>Follow me je suis trés intéréssant!</h2>
+      <h2>Follow me je suis très intéréssant!</h2>
        <ul class = "list-inline">
          <li>
             <a href="#" target="_blank">
