make my profile prettier

--- a/index.html
+++ b/index.html
@@ -13,33 +13,48 @@
 
 <body>
   <div class="container">
-    <div class="card text-center card-white">
-      <h1>Hello, I'm Jean-Loup</h1>
-        <img class="img-circle" src="images/Jlp01.PNG" width="100px" alt="Ma photo">
-          <p>I love art, sea, coding and surfing 🌊</p>
-          <p>Le Wagon is an opportunity for me to increase my coding skills and to share that with my relations.</p>
-          <p>And of course... to change my life 🖥️</p>
-            <a href="https://google.com" class ="btn-lien"><strong>Lien vers le savoir absolu</strong>
-          </a>
-        </div>
-    <div class="card text-center card-white">
-      <h2>Follow me je suis très intéréssant!</h2>
+   <div class="loading">Please wait Loading Profil</div>
+   <div class="loading2">Loading Complete</div>
+     <div class="card text-center card-white1">
+          <h1>Jean-Loup, student @ LeWagon MRS</h1>
+            <img class="img-circle" src="images/jlpbonnetrond.png" width="150px" alt="Ma photo">
+              <div class="text1">I love art, sea, coding and surfing.</div>
+              <div class="text1">🌊</div>
+              <div class="text2">Le Wagon is an opportunity for me to increase my coding skills and to share that with my relations.</div>
+              <div class="text3">And of course... to change my life.</div>
+              <div class="text3">🖥️</div>
+      </div>
+    <div class="card text-center card-white2">
+      <h2 class="loading3">Recherche de réseaux...</h2>
+      <h2 class="loading4">Connection</h2>
        <ul class = "list-inline">
          <li>
             <a href="#" target="_blank">
-              <i class ="fab fa-facebook-f">
+              <i class ="fb fab fa-facebook-f">
              </i>
             </a>
           </li>
           <li>
             <a href="#" target="_blank">
-              <i class ="fab fa-twitter">
+              <i class ="tw fab fa-twitter">
              </i>
             </a>
           </li>
           <li>
             <a href="#" target="_blank" class="icone">
-              <i class ="fab fa-medium">
+              <i class ="git fab fa-github">
+             </i>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="icone">
+              <i class ="lkd fab fa-linkedin">
+             </i>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="icone">
+              <i class ="lkd fab fa-instagram">
              </i>
             </a>
           </li>
