make my profile prettier

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     <div class="card text-center card-white2">
       <h2 class="loading3">Recherche de réseaux...</h2>
-      <h2 class="loading4">Connection</h2>
+      <h2 class="loading4">Connexion</h2>
        <ul class = "list-inline">
          <li>
             <a href="#" target="_blank">
