--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <div class="loading">Please wait Loading Profil</div>
    <div class="loading2">Loading Complete</div>
      <div class="card text-center card-white1">
-          <h1>Jean-Loup, student @ LeWagon MRS</h1>
+          <h1>Jean-Loup, student @ LeWagon</h1>
             <img class="img-circle" src="images/jlpbonnetrond.png" width="150px" alt="Ma photo">
               <div class="text1">I love art, sea, coding and surfing.</div>
               <div class="text1">🌊</div>
